# tampermonkey-scripts

./: .gitignore  .prettierrc.json  README.md  nico-commons-content-tree.user.js  package-lock.json  package.json  sheer-reservelog-to-gcal-url.user.js
.claude/: CLAUDE.md
.claude/skills/update-keywords/: SKILL.md
annotate/: 01_probe.py  02_fetch_children.py  03_evaluate.py  dataset.json  report.md
chrome-extension/: README.md
chrome-extension/sheer-to-gcal/: README.md  content_script.js  manifest.json  options.html  options.js  service_worker.js
export-from-tampermonkey/: nico-commons-content-tree.js
lib/: nico-commons-content-tree-core.cjs
nico-commons-ngram/: Cargo.toml
nico-commons-ngram/annotate/: children.json  dataset.json  model.js  report.md
nico-commons-ngram/src/: classifier.rs  learn.rs  main.rs  model.rs  ngram.rs
nico-title/: Cargo.toml  analyze_titles.py  annotate.py
nico-title/.claude/: CLAUDE.md
nico-title/src/: analyze.rs  analyze_results.rs  annotate.rs  bio.rs  compare.rs  crf.rs  download.rs  extract.rs  features.rs  main.rs
scripts/nico-commons-content-tree/: nico-commons-content-tree.user.js
smoke/: nico-commons-content-tree.smoke.cjs
src/nico-commons-content-tree/: core.js  index.js
src/sheer-reservelog-to-gcal-url/: index.js
tests/: nico-commons-content-tree-core.test.mjs
tests/fixtures/: nico-commons-children.sample.json
tools/: build-userscript.mjs
資料/: やりたいこと.md  例1.html  例4.html
